# huginn

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  build_graph.py  collection_search_cmd_adapter.py  collection_search_mcp_stdio_adapter.py  collection_update_cmd_adapter.py  confluence_cleanup_md.py  files_collection_create_cmd_adapter.py  jira_cleanup_md.py  knowledge_api_mcp_adapter.py  knowledge_api_server.py  multi_collection_search_mcp_adapter.py  notion_cleanup_md.py  notion_collection_create_cmd_adapter.py  notion_reorganize_md.py  opencode.json  pyproject.toml  start.sh.example  youtube_fetch_cmd_adapter.py  youtube_preprocess_md.py
benchmarks/: FINDINGS.md  context.py  results.py  runner.py
docs/: CONFLUENCE_HIERARCHICAL_WORKFLOW.md  HOW_IT_WORKS.md  MCP_MEMORY_OPTIMIZATION.md  X_TWEET_RANKING_PLAN.md  X_TWITTER_FETCHER_PLAN.md  YOUTUBE_TRANSCRIPT_FETCHER.md  agentic-rag-knowledge-graphs.md  benchmark-methodology.html  building-local-rag-search-from-scratch.md  claude-sessions-rag.md  cross-encoder-reranking.md  graph-enhanced-rag.html  graphrag-improvements-plan.md  hybrid-search-and-breadcrumbs.md  image-text-extraction.md  jira-analysis-improvement-report.md  knowledge-graph-when-to-use-what.html  knowledge-graph-when-to-use-what.md  notion-api-learnings.md  search-invariants.md  search-quality-report-x-feed-thread-arcs.md  search-tracing-plan.md  tagging-guide.md  wiki-collection-pattern.md
examples/: confluence_noise_patterns.json  jira_noise_patterns.json  setup-claude-sessions.sh  setup-confluence.sh  setup-jira.sh  setup-local-files.sh  setup-notion.sh  setup-wiki.sh  setup-x-timeline.sh  setup-youtube.sh
mcp_adapter/: __init__.py  config.py  formatting.py
scripts/: README.md  backfill_indexing_runs.py  cross_collection_gap_analysis.py
tests/: conftest.py  test_bm25_indexer.py  test_claude_cli.py  test_collection_creator_atomic_writes.py  test_collection_searcher_reranking.py  test_confluence_cleanup_md.py  test_confluence_cloud_document_reader.py  test_contextual_prefix.py  test_contextual_prefix_anthropic.py  test_corrective_rescue.py  test_cross_encoder_reranker.py  test_disk_persister.py  test_document_dedup.py  test_extract_entities_llm.py  test_faiss_indexer.py  test_files_document_converter.py  (+42 more)
(+179 files in other folders)
