[project]
name = "huginn"
version = "0.1.0"
description = "Index and search documents from Confluence, Notion, Jira, YouTube, and local files using local vector embeddings — with MCP integration and HTTP API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "faiss-cpu>=1.11.0",
    "rank-bm25>=0.2.2",
    "langchain>=0.3.26",
    "mcp>=1.11.0",
    "notion-client>=2.0.0",
    "playwright>=1.55.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "unstructured[all-docs]>=0.18.5",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.10.22",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",
    "langdetect>=1.0.9",
    "langchain-text-splitters>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
